--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     }
     var mousemove = function (d) {
         Tooltip
-            .html("Total Cases: " + d.value)
+            .html("Total " + d.level_2 + " Cases: " + d.value)
             .style("left", (d3.mouse(this)[0] + 70) + "px")
             .style("top", (d3.mouse(this)[1]) + "px")
     }
